[package]
name = "my_blog"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["secrets"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
diesel = { version = "2.1.6", features = ["postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.130", features = ["derive"] }

